--- a/desktop/contact.html
+++ b/desktop/contact.html
@@ -26,27 +26,27 @@
             background-color: #fff;
             color: #000;
             padding: 10px;
-            height: 80px; /* Fixed header height */
+            height: 80px; 
             display: flex;
             align-items: center; 
-            justify-content: space-between; /* Space between left and right sections */
+            justify-content: space-between; 
         }
 
         .header-left {
             display: flex;
-            align-items: center; /* Center the logo and links vertically */
+            align-items: center; 
         }
 
         header img {
-            max-height: 60px; /* Set maximum height for the logo */
-            height: auto; /* Maintain aspect ratio */
-            margin-right: 10px; /* Space between logo and links */
+            max-height: 60px; 
+            height: auto; 
+            margin-right: 10px; 
         }
 
         .header-link {
             color: #000;
             text-decoration: none;
-            margin: 0 10px; /* Space between the links */
+            margin: 0 10px; 
             font-size: 18px;
         }
 
@@ -57,32 +57,32 @@
         }
 
         h2 {
-            font-size: 36px; /* Increased size for h2 */
+            font-size: 36px;
         }
 
         /* Form Elements */
         .form-group {
-            margin: 15px 0; /* Margin for spacing between inputs */
+            margin: 15px 0; 
         }
 
         input, textarea {
-            width: 300px; /* Set width for input fields */
-            padding: 10px; /* Padding inside the fields */
-            border: none; /* Remove border */
-            border-radius: 5px; /* Rounded corners */
-            font-size: 16px; /* Font size */
+            width: 300px; 
+            padding: 10px; 
+            border: none; 
+            border-radius: 5px;
+            font-size: 16px;
         }
 
         /* Submit Button */
         .submit-button {
-            margin-top: 20px; /* Space above the button */
-            padding: 10px 20px; /* Padding for the button */
-            background-color: #fff; /* White background for the button */
-            color: #000; /* Black text color */
-            border: none; /* Remove border */
-            border-radius: 5px; /* Rounded corners */
-            font-size: 18px; /* Font size for the button */
-            cursor: pointer; /* Change cursor to pointer on hover */
+            margin-top: 20px; 
+            padding: 10px 20px;
+            background-color: #fff; 
+            color: #000; 
+            border: none; 
+            border-radius: 5px; 
+            font-size: 18px; 
+            cursor: pointer; 
         }
 
         /* Footer */
@@ -92,11 +92,11 @@
             padding: 20px;
             display: flex;
             align-items: center;
-            justify-content: flex-start; /* Align items to the left */
+            justify-content: flex-start;
             position: fixed;
             bottom: 0;
             width: 100%;
-            gap: 20px; /* Add space between follow text and icons */
+            gap: 20px; 
         }
 
         /* Social Follow Text */
@@ -110,14 +110,14 @@
         /* Social Icons */
         footer .social-icons {
             display: flex;
-            gap: 20px; /* Space between each social icon item */
+            gap: 20px; 
         }
 
         /* Social Item (Icon + Text) */
         footer .social-item {
             display: flex;
             align-items: center;
-            gap: 5px; /* Space between icon and text */
+            gap: 5px; 
         }
 
         /* Social Media Icons */
@@ -128,14 +128,14 @@
 
         /* Rights Reserved */
         footer .rights-reserved {
-            margin-left: auto; /* Pushes this item to the right */
+            margin-left: auto; 
         }
 
         /* Error Message */
         .error-message {
             color: red;
             font-size: 16px;
-            display: none; /* Hidden by default */
+            display: none; 
             margin-top: 20px;
         }
     </style>
@@ -146,7 +146,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <header>
         <div class="header-left">
-            <img src="https://imgur.com/bpw7IUT.png" alt="Logo"> <!-- Updated Logo -->
+            <img src="https://imgur.com/bpw7IUT.png" alt="Logo"> 
             <a href="homepage.html" class="header-link">Home</a>
             <a href="menu.html" class="header-link">Menu</a>
             <a href="contact.html" class="header-link">Contact</a>
