--- a/desktop/homepage.html
+++ b/desktop/homepage.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"> <!-- Importing Roboto Mono font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <style>
-        /* General Reset */
         * {
             margin: 0;
             padding: 0;
@@ -18,53 +16,50 @@
         body {
             background-color: #000;
             color: #fff;
-            font-family: 'Roboto Mono', monospace; /* Updated font to Roboto Mono */
+            font-family: 'Roboto Mono', monospace; 
             height: 100vh;
             display: flex;
             flex-direction: column;
         }
 
-        /* Header */
         header {
             background-color: #fff;
             color: #000;
             padding: 10px;
-            height: 80px; /* Fixed header height */
+            height: 80px; 
             display: flex;
             align-items: center; 
-            justify-content: space-between; /* Space between left and right sections */
+            justify-content: space-between; 
             position: relative;
         }
 
         .header-left {
             display: flex;
-            align-items: center; /* Center the logo and links vertically */
+            align-items: center; 
         }
 
         header img {
-            max-height: 60px; /* Set maximum height for the logo */
-            height: auto; /* Maintain aspect ratio */
-            margin-right: 10px; /* Space between logo and links */
+            max-height: 60px; 
+            height: auto; 
+            margin-right: 10px; 
         }
 
         .header-link {
             color: #000;
             text-decoration: none;
-            margin: 0 10px; /* Space between the links */
+            margin: 0 10px; 
             font-size: 18px;
         }
 
-        /* Main Content */
         main {
             height: calc(100vh - 80px);
             display: flex;
             align-items: flex-start;
             justify-content: center;
             padding: 10px;
-            font-family: 'Roboto Mono', monospace; /* Set font to Roboto Mono for main content */
+            font-family: 'Roboto Mono', monospace; 
         }
 
-        /* Image Border */
         .image-border {
             border: 3px solid #fff;
             display: grid;
@@ -105,14 +100,13 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.3s ease; /* Ensure the transition is smooth */
+            transition: transform 0.3s ease;
         }
 
-        /* Add hover effect to images */
         .menu-image:hover img,
         .place-image:hover img,
         .food-image:hover img {
-            transform: scale(1.05); /* Slightly scale up the image */
+            transform: scale(1.05);
         }
 
         .menu-text,
@@ -123,19 +117,17 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: #fff;
-            font-size: 28px; /* Increased font size */
+            font-size: 28px; 
             padding: 5px;
-            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; /* Kept text shadow */
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; 
         }
 
-        /* Change the text color on hover */
         .menu-image:hover .menu-text,
         .place-image:hover .place-text,
         .food-image:hover .food-text {
-            color: #ffcc00; /* Change text color on hover */
+            color: #ffcc00; 
         }
 
-        /* Footer */
         footer {
             background-color: #fff;
             color: #000;
@@ -178,13 +170,11 @@
     </style>
 </head>
 <body>
-     <!-- Your content goes here -->
-    <!-- Bootstrap JS and dependencies (optional) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <header>
         <div class="header-left" id="header-left">
-            <img src="https://imgur.com/bpw7IUT.png" alt="Logo"> <!-- Updated Logo -->
+            <img src="https://imgur.com/bpw7IUT.png" alt="Logo">
             <a href="homepage.html" class="header-link">Home</a>
             <a href="menu.html" class="header-link">Menu</a>
             <a href="contact.html" class="header-link">Contact</a>
@@ -195,19 +185,19 @@
     <main>
         <div class="image-border">
             <div class="menu-image">
-                <a href="drinks.html"> <!-- Link updated to drink.html -->
-                    <img src="https://imgur.com/YtI9srj.png" alt="Drinks"> <!-- Updated with drink image -->
+                <a href="drinks.html">
+                    <img src="https://imgur.com/YtI9srj.png" alt="Drinks">
                     <div class="menu-text">Drinks</div>
                 </a>
             </div>
             <div class="place-image">
-                <a href="place.html"> <!-- Link to place.html -->
+                <a href="place.html">
                     <img src="https://imgur.com/0nkg7D4.png" alt="Place">
                     <div class="place-text">Place</div>
                 </a>
             </div>
             <div class="food-image">
-                <a href="menu2.html"> <!-- Link to menu2.html -->
+                <a href="menu2.html">
                     <img src="https://imgur.com/aTZ0uaQ.jpg" alt="Food">
                     <div class="food-text">Food</div>
                 </a>
